<resources>
    <string name="app_name">Tesis V1.0</string>
    <string name="lblarea">Area:</string>
    <string name="lbltecnica">Technique:</string>
    <string name="btniniciar">Accept</string>
    <string name="numero_de_repeticiones">Numero de repeticiones</string>
    <string name="tiempo">Tiempo</string>
    <string name="numrep">numrep</string>

    <string-array name="areas">
        <item>Brazos</item>
        <item>Piernas</item>
    </string-array>

    <string-array name="Tbrazos">
        <item>Articulacion del codo</item>
    </string-array>

    <string-array name="Tpiernas">
        <item>Articulacion de la rodilla</item>
    </string-array>


</resources>
